--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,9 @@ include_directories("${carve_SOURCE_DIR}/external/GLOOP/include")
 include_directories("${carve_SOURCE_DIR}/external/GLEW/include")
 include_directories("${carve_SOURCE_DIR}/external/GLUI/include")
 include_directories("${carve_SOURCE_DIR}/common")
-include_directories(${OPENGL_INCLUDE_DIR})
+if(OPENGL_FOUND)
+    include_directories(${OPENGL_INCLUDE_DIR})
+endif(OPENGL_FOUND)
 
 link_directories("${gloop_BINARY_DIR}")
 link_directories("${carve_BINARY_DIR}/lib")
