--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,8 +170,8 @@ add_subdirectory(lib)
 add_subdirectory(include) 
 add_subdirectory(common) 
 add_subdirectory(src) 
-add_subdirectory(examples) 
-add_subdirectory(tests) 
+#add_subdirectory(examples) 
+#add_subdirectory(tests) 
 
 
 include(CTest)
